--- a/packages/backend/discovery/apex/ethereum/config.jsonc
+++ b/packages/backend/discovery/apex/ethereum/config.jsonc
@@ -26,7 +26,7 @@
     "0xdAC17F958D2ee523a2206206994597C13D831ec7": "USDT"
   },
   "sharedModules": {
-    "SHARPVerifierProxy": "l2beat-starkware"
+    "SHARPVerifierProxy": "shared-sharp-verifier"
   },
   "overrides": {
     "StarkExchangeUSDC": {
