--- a/packages/backend/discovery/reddioex/ethereum/config.jsonc
+++ b/packages/backend/discovery/reddioex/ethereum/config.jsonc
@@ -9,7 +9,7 @@
     "0x47312450B3Ac8b5b8e247a6bB6d523e7605bDb60": "SHARPVerifierProxy"
   },
   "sharedModules": {
-    "SHARPVerifierProxy": "l2beat-starkware"
+    "SHARPVerifierProxy": "shared-sharp-verifier"
   },
   "overrides": {
     "StarkExchange": {
