Enable compression in Koa

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -43,6 +43,7 @@
     "@l2beat/shared": "*",
     "@l2beat/shared-pure": "*",
     "@l2beat/uif": "*",
+    "@types/koa-compress": "^4.0.6",
     "@types/readline-sync": "^1.4.8",
     "ansi-to-html": "^0.7.2",
     "basic-auth": "^2.0.1",
@@ -52,6 +53,7 @@
     "jsonc-parser": "^3.2.0",
     "knex": "^2.4.2",
     "koa": "^2.14.1",
+    "koa-compress": "^5.1.1",
     "koa-conditional-get": "^3.0.0",
     "koa-etag": "^4.0.0",
     "lodash": "^4.17.21",
