--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -26,6 +26,7 @@
     "tinify-logos": "node -r esbuild-register scripts/logos/tinifyLogos.ts",
     "generate-og": "node -r esbuild-register scripts/meta-images/generate.ts",
     "typecheck": "tsc --noEmit",
+    "chromatic": "chromatic",
     "storybook": "storybook dev -p 6006 --no-open",
     "storybook:build": "(cd ../.. && wsrun -p @l2beat/{shared-pure,config} -recsm build --module es6) && storybook build"
   },
@@ -57,27 +58,27 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "7.0.9",
-    "@storybook/addon-essentials": "7.0.9",
-    "@storybook/addon-interactions": "7.0.9",
-    "@storybook/addon-styling": "^1.0.6",
-    "@storybook/addons": "7.0.9",
-    "@storybook/react": "7.0.9",
-    "@storybook/react-vite": "7.0.9",
-    "@storybook/testing-library": "^0.2.2",
+    "@chromatic-com/storybook": "^1",
+    "@storybook/addon-actions": "^8.1.1",
+    "@storybook/addon-essentials": "^8.1.1",
+    "@storybook/addon-interactions": "^8.1.1",
+    "@storybook/addons": "^7.6.17",
+    "@storybook/react": "^8.1.1",
+    "@storybook/react-vite": "^8.1.1",
+    "@storybook/test": "^8.1.1",
     "autoprefixer": "^10.4.13",
-    "chromatic": "^7.4.0",
+    "chromatic": "^11.3.5",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
     "http-proxy-middleware": "^2.0.6",
     "mockdate": "^3.0.5",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
-    "storybook": "7.0.9",
-    "storybook-addon-pseudo-states": "^2.1.2",
+    "storybook": "^8.1.1",
+    "storybook-addon-pseudo-states": "^3.1.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.1",
-    "vite": "^3.0.9",
+    "vite": "^5.2.11",
     "vite-plugin-turbosnap": "^1.0.3"
   }
 }
