--- a/packages/backend/discovery/astarzkevm/ethereum/config.jsonc
+++ b/packages/backend/discovery/astarzkevm/ethereum/config.jsonc
@@ -2,65 +2,21 @@
   "$schema": "../../../../discovery/schemas/config.v2.schema.json",
   "chain": "ethereum",
   "name": "astarzkevm",
-  "initialAddresses": ["0x5132A183E9F3CB7C848b0AAC5Ae0c4f0491B7aB2"],
+  "initialAddresses": [
+    "0x1E163594e13030244DCAf4cDfC2cd0ba3206DA80",
+    "0x0775e11309d75aA6b0967917fB0213C5673eDf81"
+  ],
   "names": {
-    "0x5132A183E9F3CB7C848b0AAC5Ae0c4f0491B7aB2": "PolygonRollupManager",
-    "0x2a3DD3EB832aF982ec71669E178424b10Dca2EDe": "Bridge",
     "0x1E163594e13030244DCAf4cDfC2cd0ba3206DA80": "AstarValidiumEtrog",
     "0x0775e11309d75aA6b0967917fB0213C5673eDf81": "AstarVerifier",
     "0x9CCD205052c732Ac1Df2cf7bf8aACC0E371eE0B0": "AstarValidiumDAC",
     "0xf98ee8c46baEa2B11e4f0450AD9D01861265F76E": "ProxyAdminOwner",
-    "0x580bda1e7A0CFAe92Fa7F6c20A3794F169CE3CFb": "GlobalExitRootV2",
-    "0x455e53CBB86018Ac2B8092FdCd39d8444aFFC3F6": "POL",
-    "0x0F99738B2Fc14D77308337f3e2596b63aE7BCC4A": "SharedProxyAdmin"
+    "0x580bda1e7A0CFAe92Fa7F6c20A3794F169CE3CFb": "GlobalExitRootV2"
+  },
+  "sharedModules": {
+    "PolygonRollupManager": "shared-polygon-cdk"
   },
   "overrides": {
-    "PolygonRollupManager": {
-      "ignoreMethods": [
-        "checkStateRootInsidePrime",
-        "pendingStateTransitions",
-        "batchFee",
-        "calculateRewardPerBatch",
-        "getForcedBatchFee",
-        "getLastVerifiedBatch",
-        "lastBatchSequenced",
-        "lastForceBatch",
-        "lastForceBatchSequenced",
-        "lastPendingState",
-        "lastPendingStateConsolidated",
-        "lastTimestamp",
-        "lastVerifiedBatch",
-        "multiplierBatchFee",
-        "getRollupExitRoot",
-        "lastAggregationTimestamp",
-        "totalSequencedBatches",
-        "totalVerifiedBatches"
-      ],
-      "ignoreInWatchMode": ["rollupCount"],
-      "fields": {
-        "rollupData": {
-          "description": "Contains important info such as the etrog and verifier address, the rollup type and chain id",
-          "severity": "HIGH",
-          "type": "CODE_CHANGE",
-          "handler": {
-            "type": "call",
-            "method": "rollupIDToRollupData",
-            "args": [2], // astar ID
-            "pickFields": [
-              "rollupContract",
-              "chainID",
-              "verifier",
-              "forkID",
-              "rollupTypeID",
-              "rollupCompatibilityID"
-            ]
-          }
-        }
-      }
-    },
-    "Bridge": {
-      "ignoreDiscovery": true
-    },
     "AstarValidiumDAC": {
       "fields": {
         "members": {
@@ -74,12 +30,6 @@
     },
     "AstarValidiumEtrog": {
       "ignoreInWatchMode": ["lastAccInputHash"]
-    },
-    "POL": {
-      "ignoreDiscovery": true // already fetched in shared-config
-    },
-    "GlobalExitRootV2": {
-      "ignoreDiscovery": true // already fetched in shared-config
     }
   }
 }
