--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -826,6 +826,10 @@
       "address": "0xc98D64DA73a6616c42117b582e832812e7B8D57F"
     },
     {
+      "symbol": "rswETH",
+      "address": "0xFAe103DC9cf190eD75350761e95403b7b8aFa6c0"
+    },
+    {
       "symbol": "RUNE",
       "address": "0x3155BA85D5F96b2d030a4966AF206230e46849cb",
       "coingeckoId": "thorchain"
