--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -11,6 +11,7 @@
   "arbitrum": true,
   "astarzkevm": true,
   "avalanche": true,
+  "axonum": true,
   "aztec": true,
   "aztec-v2": true,
   "aztecconnect": true,
