Kroma update: spETH escrow

--- a/packages/backend/discovery/kroma/ethereum/config.jsonc
+++ b/packages/backend/discovery/kroma/ethereum/config.jsonc
@@ -7,7 +7,8 @@
     "0x827962404D7104202C5aaa6b929115C8211d9596",
     "0x46d07221dfC313afe1BF104F4bB1f185301D65B9",
     "0xb3c415c2Aad428D5570208e1772cb68e7D06a537",
-    "0x7e1Bdb9ee75B6ef1BCAAE3B1De1c616C7B11ef6e"
+    "0x7e1Bdb9ee75B6ef1BCAAE3B1De1c616C7B11ef6e",
+    "0x88b6bBb148748C18B377A57c9d4E6c714AF28078"
   ],
   "names": {
     "0x31F648572b67e60Ec6eb8E197E1848CC5F5558de": "KromaPortal",
@@ -25,9 +26,45 @@
     "0x3aa00bb915A8e78b0523E4c365e3E70A19d329e6": "KromaOperator",
     "0x3971EB866AA9b2b8aFEa8a7C816F3b7e8b195a35": "SystemConfig",
     "0xFd234971881a7c72965175fA8E438c97B2Dcd273": "Poseidon2",
-    "0x7e1Bdb9ee75B6ef1BCAAE3B1De1c616C7B11ef6e": "USDCBridge"
+    "0x7e1Bdb9ee75B6ef1BCAAE3B1De1c616C7B11ef6e": "USDCBridge",
+    "0x88b6bBb148748C18B377A57c9d4E6c714AF28078": "SpectrumCore", // weETH Escrow
+    "0xd26F4195B147b988E7497779f7DED22ba130204d": "SC_ProxyAdmin",
+    "0x7fe71D0Dde2f6Bbc8474c41dc39bDFd6bCd9Eca5": "SpectrumHub", // spETH custom GW
+    "0x9841bC06C8284095824e9397AC818aD1114C444C": "SH_ProxyAdmin",
+    "0xf96d4B1e0a0B129e1471e88dF6f1281b933Bc474": "spETH",
+    "0xa50f2b3d55fb311c81f6FB75998B48A67505c6F4": "spETH_ProxyAdmin"
   },
   "overrides": {
+    "spETH": {
+      "fields": {
+        "accessControl": {
+          "handler": {
+            "type": "accessControl"
+          }
+        }
+      }
+    },
+    "SpectrumHub": {
+      "fields": {
+        "accessControl": {
+          "handler": {
+            "type": "accessControl"
+          }
+        }
+      },
+      "ignoreRelatives": ["getHubStakeAssetLists", "getHubUnstakeAssetLists"]
+    },
+    "SpectrumCore": {
+      "fields": {
+        "accessControl": {
+          "handler": {
+            "type": "accessControl"
+          }
+        }
+      },
+      "ignoreMethods": ["evalSpectrum", "getSpectrumFromETH"],
+      "ignoreRelatives": ["getCoreSupportAssetLists", "getGlobalSnap"]
+    },
     "L2OutputOracle": {
       "ignoreMethods": [
         "computeL2Timestamp",
@@ -106,17 +143,18 @@
     },
     "ValidatorPool": {
       "ignoreMethods": ["getBond"],
-      "ignoreInWatchMode": ["nextValidator", "validatorCount", "validators"],
-      "fields": {
-        "validators": {
-          "handler": {
-            "type": "dynamicArray",
-            "slot": 54,
-            "returnType": "address",
-            "ignoreRelative": true
-          }
-        }
-      }
+      "ignoreInWatchMode": ["nextValidator", "validatorCount"]
+      // discovers all 300+ validator addresses:
+      // "fields": {
+      //   "validators": {
+      //     "handler": {
+      //       "type": "dynamicArray",
+      //       "slot": 54,
+      //       "returnType": "address",
+      //       "ignoreRelative": true
+      //     }
+      //   }
+      // }
     },
     "UpgradeGovernor": {
       "ignoreMethods": [
