ignore messenger relative

--- a/packages/backend/discovery/across-v3/ethereum/config.jsonc
+++ b/packages/backend/discovery/across-v3/ethereum/config.jsonc
@@ -130,6 +130,7 @@
     },
     "Base_Adapter": {
       "ignoreRelatives": [
+        "cctpTokenMessenger",
         "L1_STANDARD_BRIDGE",
         "L1_WETH",
         "MESSENGER",
