--- a/packages/backend/discovery/zora/ethereum/config.jsonc
+++ b/packages/backend/discovery/zora/ethereum/config.jsonc
@@ -27,8 +27,7 @@
       "ignoreInWatchMode": ["nonce"]
     },
     "OptimismPortal": {
-      "ignoreMethods": ["isOutputFinalized"],
-      "ignoreInWatchMode": ["params"]
+      "extends": "opstack/OptimismPortal"
     },
     "L2OutputOracle": {
       "extends": "opstack/L2OutputOracle"
@@ -37,37 +36,10 @@
       "ignoreInWatchMode": ["nonce"]
     },
     "L1CrossDomainMessenger": {
-      "ignoreMethods": ["xDomainMessageSender"],
-      "ignoreInWatchMode": ["messageNonce"]
+      "extends": "opstack/L1CrossDomainMessenger"
     },
     "SystemConfig": {
-      "fields": {
-        // this overrides the batcherHash method return type (bytes32 -> address) so our discovery detects it as an address
-        "batcherHash": {
-          "handler": {
-            "type": "call",
-            "method": "function batcherHash() view returns (address)",
-            "args": []
-          }
-        },
-        "opStackDA": {
-          "handler": {
-            "type": "opStackDA",
-            "sequencerAddress": "{{ batcherHash }}"
-          }
-        },
-        "sequencerInbox": {
-          "handler": {
-            "type": "opStackSequencerInbox",
-            "sequencerAddress": "{{ batcherHash }}"
-          }
-        },
-        "gasLimit": {
-          "description": "Gas limit for blocks on L2.",
-          "severity": "LOW"
-        }
-      },
-      "ignoreInWatchMode": ["scalar"]
+      "extends": "opstack/SystemConfig"
     }
   }
 }
