--- a/vercel.json
+++ b/vercel.json
@@ -101,6 +101,15 @@
       "destination": "https://api.l2beat.com/api/projects/:project/tvl/chains/:chain/assets/:asset/types/:type"
     },
     {
+      "source": "/api/tvl2/aggregate",
+      "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
+      "destination": "https://staging.l2beat.com/api/tvl2/aggregate"
+    },
+    {
+      "source": "/api/tvl2/aggregate",
+      "destination": "https://api.l2beat.com/api/tvl2/aggregate"
+    },
+    {
       "source": "/api/tvl/aggregate",
       "has": [{ "type": "host", "value": ".*l2beat-staging.*" }],
       "destination": "https://staging.l2beat.com/api/tvl/aggregate"
