--- a/packages/backend/discovery/kroma/ethereum/config.jsonc
+++ b/packages/backend/discovery/kroma/ethereum/config.jsonc
@@ -36,6 +36,7 @@
   },
   "overrides": {
     "spETH": {
+      "ignoreInWatchMode": ["totalSupply"],
       "fields": {
         "accessControl": {
           "handler": {
@@ -55,6 +56,7 @@
       "ignoreRelatives": ["getHubStakeAssetLists", "getHubUnstakeAssetLists"]
     },
     "SpectrumCore": {
+      "ignoreInWatchMode": ["getGlobalSnap"],
       "fields": {
         "accessControl": {
           "handler": {
