Make config tests pass

--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -148,6 +148,7 @@
   "ten": true,
   "termstructure": true,
   "tradable": true,
+  "transporter": true,
   "world": true,
   "wormholeV1": true,
   "xai": true,
