--- a/packages/backend/discovery/amarok/ethereum/config.jsonc
+++ b/packages/backend/discovery/amarok/ethereum/config.jsonc
@@ -31,7 +31,7 @@
     "0x7ed49D0a13255802A281C08688563bd8D5f726b1": "PolygonZkHubConnector",
     "0x9Ba7D2Ab079Bd1924859e2fECDAD1bEBe5B119Fa": "OptimismV0HubConnector",
     "0x7b2bE683266909A6a4068e743083dd40621d663E": "ModeHubConnector",
-    "0x279fDA9AdDB854541f0bb86733d924e28c24c625": "NewPolygonZkHubConnector"
+    "0x279fDA9AdDB854541f0bb86733d924e28c24c625": "xLayerZkHubConnector"
   },
   "maxDepth": 9,
   "initialAddresses": ["0x8898B472C54c31894e3B9bb83cEA802a5d0e63C6"],
@@ -190,7 +190,7 @@
       "ignoreRelatives": ["AMB", "mirrorConnector"],
       "ignoreInWatchMode": ["proposed", "proposedTimestamp"]
     },
-    "NewPolygonZkHubConnector": {
+    "xLayerZkHubConnector": {
       "ignoreRelatives": ["AMB", "mirrorConnector"],
       "ignoreInWatchMode": ["proposed", "proposedTimestamp"]
     },
