rari: add Caldera Multisig tag

--- a/packages/backend/discovery/rari/arbitrum/config.jsonc
+++ b/packages/backend/discovery/rari/arbitrum/config.jsonc
@@ -17,7 +17,7 @@
     "0x139C5A235632EDdad741ff380112B3161d31a21C": "UpgradeExecutor",
     "0x8bE956aB42274056ef4471BEb211b33e258b7324": "L1CustomGateway",
     "0x46406c88285AD9BE2fB23D9aD96Cb578d824cAb6": "L1ERC20Gateway",
-    "0x6FD149B3d41fd860B9Da1A6fE54e902eF41F68BF": "UpgradeExecutorMemberGnosisSafeL2"
+    "0x6FD149B3d41fd860B9Da1A6fE54e902eF41F68BF": "Caldera Multisig"
   },
   "overrides": {
     "ChallengeManager": {
@@ -90,7 +90,7 @@
         }
       }
     },
-    "UpgradeExecutorMemberGnosisSafeL2": {
+    "Caldera Multisig": {
       "ignoreInWatchMode": ["nonce"]
     }
   }
