Xai updates: Ignore halving emissions in watch mode

--- a/packages/backend/discovery/xai/arbitrum/config.jsonc
+++ b/packages/backend/discovery/xai/arbitrum/config.jsonc
@@ -78,7 +78,11 @@
         "assignedKeyToPool",
         "getBoostFactorForKeyId"
       ],
-      "ignoreInWatchMode": ["challengeCounter", "getKycWalletCount"],
+      "ignoreInWatchMode": [
+        "challengeCounter",
+        "getKycWalletCount",
+        "calculateChallengeEmissionAndTier"
+      ],
       "ignoreRelatives": ["esXaiAddress", "xaiAddress"]
     },
     "NodeLicenseRegistry": {
