--- a/packages/backend/discovery/publicgoodsnetwork/ethereum/config.jsonc
+++ b/packages/backend/discovery/publicgoodsnetwork/ethereum/config.jsonc
@@ -10,7 +10,7 @@
     "0x97BAf688E5d0465E149d1d5B497Ca99392a6760e": "L1CrossDomainMessenger",
     "0x09d5DbA52F0ee2C4A5E94FD5C802bD74Ca9cAD3e": "AddressManager",
     "0x39E13D1AB040F6EA58CE19998edCe01B3C365f84": "GuardianMultisig",
-    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "PGNMultisig",
+    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "ConduitMultisig",
     "0x7Df716EAD1d83a2BF35B416B7BC84bd0700357C9": "SystemConfig"
   },
   "overrides": {
@@ -41,7 +41,7 @@
         }
       }
     },
-    "PGNMultisig": {
+    "ConduitMultisig": {
       "ignoreInWatchMode": ["nonce"]
     },
     "GuardianMultisig": {
