--- a/packages/backend/discovery/aevo/ethereum/config.jsonc
+++ b/packages/backend/discovery/aevo/ethereum/config.jsonc
@@ -9,41 +9,41 @@
     "0x27ff92b30Cae00dABCF8045cc68fc9dcB67C5019": "ProxyAdmin",
     "0x11dd2d9B5ec142dbAFBEFEA82a75985Eae4e12b0": "L1CrossDomainMessenger",
     "0x7a616b25E7c96fc4d652966d7DDAbB51dE28eCc1": "AddressManager",
-    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "AevoMultiSig",
+    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "ConduitMultisig",
     "0x909E51211e959339EFb14b36f5A50955a8ae3770": "L2OutputOracle",
-    "0xF761Cc49bB127AB666899b41CDC4E62fA50cD9ca": "SystemConfig"
+    "0xF761Cc49bB127AB666899b41CDC4E62fA50cD9ca": "SystemConfig",
   },
   "overrides": {
     "L1CrossDomainMessenger": {
       "ignoreMethods": ["xDomainMessageSender"],
-      "ignoreInWatchMode": ["messageNonce"]
+      "ignoreInWatchMode": ["messageNonce"],
     },
     "L2OutputOracle": {
       "ignoreMethods": [
         "getL2OutputAfter",
         "getL2OutputIndexAfter",
         "getL2Output",
-        "computeL2Timestamp"
+        "computeL2Timestamp",
       ],
       "ignoreInWatchMode": [
         "nextBlockNumber",
         "nextOutputIndex",
         "latestBlockNumber",
-        "latestOutputIndex"
+        "latestOutputIndex",
       ],
       "fields": {
         "deletedOutputs": {
           "handler": {
             "type": "stateFromEvent",
             "event": "OutputsDeleted",
-            "returnParams": ["prevNextOutputIndex", "newNextOutputIndex"]
-          }
-        }
-      }
+            "returnParams": ["prevNextOutputIndex", "newNextOutputIndex"],
+          },
+        },
+      },
     },
     "OptimismPortal": {
       "ignoreMethods": ["isOutputFinalized"],
-      "ignoreInWatchMode": ["params"]
+      "ignoreInWatchMode": ["params"],
     },
     "SystemConfig": {
       "fields": {
@@ -52,25 +52,25 @@
           "handler": {
             "type": "call",
             "method": "function batcherHash() view returns (address)",
-            "args": []
-          }
+            "args": [],
+          },
         },
         "opStackDA": {
           "handler": {
             "type": "opStackDA",
-            "sequencerAddress": "{{ batcherHash }}"
-          }
+            "sequencerAddress": "{{ batcherHash }}",
+          },
         },
         "sequencerInbox": {
           "handler": {
             "type": "opStackSequencerInbox",
-            "sequencerAddress": "{{ batcherHash }}"
-          }
-        }
-      }
+            "sequencerAddress": "{{ batcherHash }}",
+          },
+        },
+      },
     },
-    "AevoMultiSig": {
-      "ignoreInWatchMode": ["nonce"]
-    }
-  }
+    "ConduitMultisig": {
+      "ignoreInWatchMode": ["nonce"],
+    },
+  },
 }
