--- a/packages/backend/discovery/ancient/ethereum/config.jsonc
+++ b/packages/backend/discovery/ancient/ethereum/config.jsonc
@@ -16,7 +16,7 @@
     "0x15A52Fed1c448028A240b603dD93f2697E12Dc82": "AddressManager",
     "0x012c341506ee1939e56084F43Ae5dbCe224Ce2af": "L1CrossDomainMessenger",
     "0x0b4cfc49aCc656CE6D03CB0794860Da92bE3E8ec": "SystemConfig",
-    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "Ancient8Multisig",
+    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "ConduitMultisig",
     "0x1B1ecDdbd5F9601b34262Aa3Ca346209E61aA68f": "ChallengerMultisig",
     "0x132b3456300332d488f946B818eB9512931eBCAa": "L1ERC721BridgeImplementation"
   },
@@ -79,7 +79,7 @@
     "L1ERC721BridgeImplementation": {
       "ignoreDiscovery": true
     },
-    "Ancient8Multisig": {
+    "ConduitMultisig": {
       "ignoreInWatchMode": ["nonce"]
     }
   }
