--- a/packages/backend/discovery/metal/ethereum/config.jsonc
+++ b/packages/backend/discovery/metal/ethereum/config.jsonc
@@ -10,8 +10,7 @@
     "0x3F37aBdE2C6b5B2ed6F8045787Df1ED1E3753956": "OptimismPortal",
     "0x3B1F7aDa0Fcc26B13515af752Dd07fB1CAc11426": "L2OutputOracle",
     "0x0a47A44f1B2bb753474f8c830322554A96C9934D": "L1CrossDomainMessenger",
-    "0x42d27eEA1AD6e22Af6284F609847CB3Cd56B9c64": "MetalMultisig",
-    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "ProxyAdminOwner", // Conduit Multisig
+    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "ConduitMultisig",
     "0x95703e0982140D16f8ebA6d158FccEde42f04a4C": "SuperchainConfig",
     "0x543bA4AADBAb8f9025686Bd03993043599c6fB04": "SuperchainProxyAdmin",
     "0x5a0Aae59D09fccBdDb6C6CcEB07B7279367C3d2A": "SuperchainProxyAdminOwner",
@@ -20,7 +19,7 @@
     "0x9BA6e03D8B90dE867373Db8cF1A58d2F7F006b3A": "FoundationMultisig_2"
   },
   "overrides": {
-    "ProxyAdminOwner": {
+    "ConduitMultisig": {
       "ignoreInWatchMode": ["nonce"]
     },
     "0x4200000000000000000000000000000000000010": {
