--- a/packages/backend/discovery/mode/ethereum/config.jsonc
+++ b/packages/backend/discovery/mode/ethereum/config.jsonc
@@ -12,7 +12,7 @@
     "0x4317ba146D4933D889518a3e5E11Fe7a53199b04": "L2OutputOracle",
     "0x50eF494573f28Cad6B64C31b7a00Cdaa48306e15": "AddressManager",
     "0x309Fe2536d01867018D120b40e4676723C53A14C": "ChallengerMultisig",
-    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "ProxyAdminOwner",
+    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "ConduitMultisig",
     "0x5e6432F18Bc5d497B1Ab2288a025Fbf9D69E2221": "SystemConfig",
     "0x95bDCA6c8EdEB69C98Bd5bd17660BaCef1298A6f": "L1CrossDomainMessenger",
     "0x543bA4AADBAb8f9025686Bd03993043599c6fB04": "SuperchainProxyAdmin",
@@ -49,7 +49,7 @@
         }
       }
     },
-    "ProxyAdminOwner": {
+    "ConduitMultisig": {
       "ignoreInWatchMode": ["nonce"]
     },
     "L1CrossDomainMessenger": {
