--- a/packages/backend/discovery/orderly/ethereum/config.jsonc
+++ b/packages/backend/discovery/orderly/ethereum/config.jsonc
@@ -8,7 +8,7 @@
   ],
   "names": {
     "0xe07eA0436100918F157DF35D01dCE5c11b16D1F1": "L1StandardBridge",
-    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "OrderlyMultisig",
+    "0x4a4962275DF8C60a80d3a25faEc5AA7De116A746": "ConduitMultisig",
     "0x886B187C3D293B1449A3A0F23Ca9e2269E0f2664": "SystemConfig",
     "0xc76543A64666d9a073FaEF4e75F651c88e7DBC08": "L1CrossDomainMessenger",
     "0x91493a61ab83b62943E6dCAa5475Dd330704Cc84": "OptimismPortal",
@@ -44,7 +44,7 @@
         }
       }
     },
-    "OrderlyMultisig": {
+    "ConduitMultisig": {
       "ignoreInWatchMode": ["nonce"]
     },
     "L1CrossDomainMessenger": {
