--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -1654,6 +1654,27 @@
       "formula": "circulatingSupply"
     },
     {
+      "symbol": "mBTC",
+      "address": "0x1468177DbCb2a772F3d182d2F1358d442B553089",
+      "type": "NMV",
+      "formula": "totalSupply",
+      "coingeckoId": "bitcoin"
+    },
+    {
+      "symbol": "mETH",
+      "address": "0xACCBC418a994a27a75644d8d591afC22FaBA594e",
+      "category": "ether",
+      "type": "NMV",
+      "formula": "totalSupply"
+    },
+    {
+      "symbol": "mUSD",
+      "address": "0x649d4524897cE85A864DC2a2D5A11Adb3044f44a",
+      "category": "stablecoin",
+      "type": "NMV",
+      "formula": "totalSupply"
+    },
+    {
       "symbol": "STONE",
       "address": "0xEc901DA9c68E90798BbBb74c11406A32A70652C3",
       "type": "EBV",
