--- a/packages/backend/discovery/molten/arbitrum/config.jsonc
+++ b/packages/backend/discovery/molten/arbitrum/config.jsonc
@@ -4,8 +4,10 @@
   "name": "molten",
   "initialAddresses": [
     "0x235000876bd58336C802B3546Fc0250f285fCc79",
+    "0x5a6f8ea5e1028C80CB98Fd8916afBBC4E6b23D80"
   ],
   "names": {
+    "0x235000876bd58336C802B3546Fc0250f285fCc79": "Inbox",
     "0x0f28D76Ec5c62b502625351726b4A3E3F54FF5F0": "RollupProxy",
     "0xE1d32C985825562edAa906fAC39295370Db72195": "Bridge",
     "0x7BB97862CA342B5fbe2AE2cF2E954F6327f587b1": "ChallengeManager",
@@ -13,14 +15,12 @@
     "0x0fFe9ACC296ddd4De5F616Aa482C99fA4b41A3E2": "SequencerInbox",
     "0x92ff91308F5f1036435f23c2F4F136Bb7475425d": "UpgradeExecutor",
     "0x6FD149B3d41fd860B9Da1A6fE54e902eF41F68BF": "Caldera Multisig",
-    "0x66E535e8D2ebf13F49F3D49e5c50395a97C137b1": "Molten Token"
+    "0x66E535e8D2ebf13F49F3D49e5c50395a97C137b1": "Molten Token",
+    "0x5a6f8ea5e1028C80CB98Fd8916afBBC4E6b23D80": "L1OrbitERC20Gateway"
   },
   "overrides": {
-    "Molten Token":{
-        "ignoreRelatives": ["lzEndpoint"]
-    },
-    "SocketVault_Reya": {
-      "ignoreMethods": ["hook__", "token"]
+    "Molten Token": {
+      "ignoreRelatives": ["lzEndpoint"]
     },
     "ChallengeManager": {
       "ignoreMethods": ["challenges"]
