--- a/packages/backend/discovery/socket/ethereum/config.jsonc
+++ b/packages/backend/discovery/socket/ethereum/config.jsonc
@@ -11,6 +11,7 @@
     "0xB39DF6BBB1Cf2B609DeE43F109caFEFF1A7CCBEa",
     "0xeBB5D642aA8ccDeE98373D6aC3ee0602b63824b3",
     "0xdFf78A949E47c1e90f3Dd6dd7Fe2Fa72B42a75f7",
+    "0x64dF894688c5052BeAdC35371cF69151Ebc5D658",
     "0x5e98A25d8d6FF69A8992d6Aa57948dFB77D4ECBa",
     "0x8180EcCC825b692ef65FF099a0A387743788bf78",
     "0x4BB4C3CDc7562f08e9910A0C7D8bB7e108861eB4",
@@ -45,7 +46,8 @@
     "0x5e98A25d8d6FF69A8992d6Aa57948dFB77D4ECBa": "USDT Vault Lyra",
     "0x246d38588b16Dd877c558b245e6D5a711C649fCF": "LyraMultisig",
     "0xB39DF6BBB1Cf2B609DeE43F109caFEFF1A7CCBEa": "WETH Vault Hook", // hook.xyz, hook eoa admin
-    "0xdFf78A949E47c1e90f3Dd6dd7Fe2Fa72B42a75f7": "USDC Vault Reya", // socket admin
+    "0xdFf78A949E47c1e90f3Dd6dd7Fe2Fa72B42a75f7": "USDC Vault Reya", // socketadmin.eth
+    "0x64dF894688c5052BeAdC35371cF69151Ebc5D658": "WETH Vault Reya", // socketadmin.eth
     "0x8180EcCC825b692ef65FF099a0A387743788bf78": "weETH Vault Lyra",
     "0x4BB4C3CDc7562f08e9910A0C7D8bB7e108861eB4": "rswETH Vault Lyra",
     "0x95d60E34aB2E626407d98dF8C240e6174e5D37E5": "ETHFI Vault Kinto",
@@ -60,9 +62,13 @@
     "0x00A0c9d82B95a17Cdf2D46703F2DcA13EB0E8A94": "WETH Vault Kinto",
     "0xc5d01939Af7Ce9Ffc505F0bb36eFeDde7920f2dc": "wstETH Vault Kinto",
     "0x12Cf431BdF7F143338cC09A0629EDcCEDCBCEcB5": "DAI Vault Kinto",
-    "0x6ed6E6B7c34Adf01B73732f0c06e3bbd9d4EaE58": "DAI Vault 2 Kinto"
+    "0x6ed6E6B7c34Adf01B73732f0c06e3bbd9d4EaE58": "DAI Vault 2 Kinto",
+    "0xf152Abda9E4ce8b134eF22Dc3C6aCe19C4895D82": "KintoMultisig"
   },
   "overrides": {
+    "KintoMultisig": {
+      "ignoreInWatchMode": ["nonce"]
+    },
     "Socket": {
       "ignoreInWatchMode": ["globalMessageCount"],
       "fields": {
@@ -202,6 +208,9 @@
       "ignoreMethods": ["token__"]
     },
     "USDC Vault Reya": {
+      "ignoreRelatives": ["token", "hook__"]
+    },
+    "WETH Vault Reya": {
       "ignoreRelatives": ["token", "hook__"]
     },
     "USDT Vault Lyra": {
