Add server logic example, fix biome

--- a/biome.json
+++ b/biome.json
@@ -21,6 +21,7 @@
   "organizeImports": { "enabled": true },
   "linter": {
     "enabled": true,
+    "ignore": ["packages/frontend2"],
     "rules": {
       "recommended": false,
       "complexity": {
