--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -7,21 +7,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "biome check .",
+    "format:fix": "biome check --apply ."
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.37.1",
+    "@trpc/client": "^11.0.0-rc.374",
+    "@trpc/react-query": "^11.0.0-rc.374",
+    "@trpc/server": "^11.0.0-rc.374",
+    "next": "^14.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "^14.2.2"
+    "superjson": "^2.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.5",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5.4.5"
   }
 }
