--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     ]
   },
   "scripts": {
-    "build": "turbo run build --filter=!asset-risk",
+    "build": "turbo run build --filter=!asset-risk --filter=!frontend2",
     "build:asset-risk": "turbo run build --filter=asset-risk",
     "build:backend": "turbo run build --filter=backend",
     "build:frontend": "turbo run build --filter=frontend",
-    "build:dependencies": "turbo run build --filter=frontend^... --filter=backend^... --filter=asset-risk^...",
+    "build:frontend2": "turbo run build --filter=frontend2",
+    "build:dependencies": "turbo run build --filter=frontend^... --filter=frontend2^... --filter=backend^... --filter=asset-risk^...",
     "clean": "turbo run clean",
     "fix": "yarn lint:fix && yarn format:fix",
     "format": "wsrun -ecam format",
