Add TOPIA token

--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -971,6 +971,10 @@
       "address": "0x582d872A1B094FC48F5DE31D3B73F2D9bE47def1"
     },
     {
+      "symbol": "TOPIA",
+      "address": "0xcccCb68e1A848CBDB5b60a974E07aAE143ed40C3"
+    },
+    {
       "symbol": "TRAC",
       "address": "0xaA7a9CA87d3694B5755f213B5D04094b8d0F0A6F"
     },
