Update info after verified Bridger contract

--- a/packages/backend/discovery/kinto/ethereum/config.jsonc
+++ b/packages/backend/discovery/kinto/ethereum/config.jsonc
@@ -42,14 +42,14 @@
       "ignoreRelatives": [
         "DAI",
         "ETH",
-        "exchangeProxy",
         "l2Vault",
         "sDAI",
         "sUSDe",
         "USDe",
         "weETH",
         "WETH",
-        "wstETH"
+        "wstETH",
+        "swapRouter"
       ],
       "ignoreMethods": ["proxiableUUID", "depositCount", "domainSeparator"]
     },
