--- a/packages/backend/discovery/reya/ethereum/config.jsonc
+++ b/packages/backend/discovery/reya/ethereum/config.jsonc
@@ -15,7 +15,8 @@
     "0x6CA2A628fb690Bd431F4aA608655ce37c66aff9d": "SequencerInbox",
     "0x07390626b8Bc2C04b1D93c7D246A0629198D7868": "UpgradeExecutor",
     "0xdFf78A949E47c1e90f3Dd6dd7Fe2Fa72B42a75f7": "SocketVault_Reya",
-    "0x2b0E04Dc90e3fA58165CB41E2834B44A56E766aF": "ValidatorUtils"
+    "0x2b0E04Dc90e3fA58165CB41E2834B44A56E766aF": "ValidatorUtils",
+    "0xBeA2Bc852a160B8547273660E22F4F08C2fa9Bbb": "ReyaMultisig"
   },
   "overrides": {
     "ValidatorUtils": {
