--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -18,6 +18,7 @@
     "@trpc/react-query": "^11.0.0-rc.374",
     "@trpc/server": "^11.0.0-rc.374",
     "next": "^14.2.2",
+    "next-intl": "^3.14.1",
     "next-plausible": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
