--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -25,6 +25,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
