--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -19,6 +19,7 @@
     "@trpc/server": "^11.0.0-rc.374",
     "next": "^14.2.2",
     "next-intl": "^3.14.1",
+    "next-nprogress-bar": "^2.3.12",
     "next-plausible": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
