--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -749,6 +749,10 @@
       "address": "0xfB5c6815cA3AC72Ce9F5006869AE67f18bF77006"
     },
     {
+      "symbol": "pufETH",
+      "address": "0xD9A442856C234a39a81a089C06451EBAa4306a72"
+    },
+    {
       "symbol": "Puff",
       "address": "0x18fA05ee5e478EED8925946abb41d09AEc5d34D6"
     },
@@ -1718,6 +1722,12 @@
   ],
   "mantapacific": [
     {
+      "symbol": "ETH",
+      "type": "CBV",
+      "formula": "totalSupply", // formula does not matter here
+      "category": "ether"
+    },
+    {
       "symbol": "MANTA",
       "address": "0x95CeF13441Be50d20cA4558CC0a27B601aC544E5",
       "type": "NMV",
@@ -1971,6 +1981,12 @@
   ],
   "blast": [
     {
+      "symbol": "ETH",
+      "type": "CBV",
+      "formula": "totalSupply", // formula does not matter here
+      "category": "ether"
+    },
+    {
       "symbol": "ezETH",
       "address": "0x2416092f143378750bb29b79ed961ab195cceea5",
       "coingeckoId": "renzo-restaked-eth",
@@ -2097,6 +2113,12 @@
     }
   ],
   "zksync2": [
+    {
+      "symbol": "ETH",
+      "type": "CBV",
+      "formula": "totalSupply", // formula does not matter here
+      "category": "ether"
+    },
     {
       "symbol": "USDC",
       "address": "0x1d17CBcF0D6D143135aE902365D2E5e2A16538D4",
