--- a/packages/frontend2/package.json
+++ b/packages/frontend2/package.json
@@ -20,6 +20,7 @@
     "next": "^14.2.2",
     "next-intl": "^3.14.1",
     "next-plausible": "^3.12.0",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "superjson": "^2.2.1",
